[package]
authors = ["MarkosTh09"]
description = "Tool to convert Lua code into Clue code\nMade by MarkosTh09"
repository = "https://github.com/ClueLang/Probe"
edition = "2021"
license = "MIT"
name = "probe"
version = "1.1.0"

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }

[dev-dependencies]
insta = "1.29.0"
tests_proc_macro = { path = "tests_proc_macro" }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
