[package]
authors = ["MarkosTh09"]
description = "Tool to convert Lua code into Clue code\nMade by MarkosTh09"
keywords = ["transpiler", "programming-language", "compiler", "clue"]
repository = "https://github.com/ClueLang/cluna"
edition = "2021"
license = "MIT"
name = "cluna"
version = "1.1.0"

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }

[dev-dependencies]
insta = "1.29.0"
tests_proc_macro = { path = "tests_proc_macro" }

[profile.test.package.insta]
opt-level = 3

[profile.test.package.similar]
opt-level = 3
